--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -435,6 +435,17 @@ Const assertion must be used over enum.
 While enums can still cover use cases as const assertion would, we tend to avoid it. Some of the reasonings as mentioned in TypeScript documentation - [Const enum pitfalls](https://www.typescriptlang.org/docs/handbook/enums.html#const-enum-pitfalls), [Objects vs Enums](https://www.typescriptlang.org/docs/handbook/enums.html#objects-vs-enums), [Reverse mappings](https://www.typescriptlang.org/docs/handbook/enums.html#reverse-mappings)...
 
 ```ts
+// .eslintrc.js
+'no-restricted-syntax': [
+  'error',
+  {
+    selector: 'TSEnumDeclaration',
+    message: 'Use const assertion or a string union type instead.',
+  },
+],
+```
+
+```ts
 // ❌ Avoid using enums
 enum UserRole {
   GUEST,
