--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -159,7 +159,7 @@ const customColor: Color = '#AD3128';
 
 ### Discriminated union
 
-Discriminated unions are a powerful concept to model complex data structures and improve type safety, leading to clearer, more maintainable, and less error-prone code.  
+Discriminated unions are a powerful concept to model complex data structures and improve type safety, leading to clearer, more maintainable and less error-prone code.  
 You may encounter discriminated unions under different names such as tagged unions or sum types in various programming languages as C, Haskell, Rust (in conjunction with pattern-matching).
 
 Embrace using discriminated unions:
