--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -168,22 +168,21 @@ Embrace using discriminated unions:
 - Exhaustiveness check - TypeScript can ensure that all possible variants of a type are implemented, eliminating the risk of undefined or unexpected behavior at runtime. ([eslint rule](https://typescript-eslint.io/rules/switch-exhaustiveness-check/))
 
   ```ts
-  const SHAPES = [
-    { kind: 'square', size: 7 },
-    { kind: 'rectangle', width: 12, height: 6 },
-    { kind: 'circle', radius: 23 },
-  ] as const;
+  type Circle = { kind: 'circle'; radius: number };
+  type Square = { kind: 'square'; size: number };
+  type Triangle = { kind: 'triangle'; base: number; height: number };
 
-  type Shape = (typeof SHAPES)[number];
+  // Create discriminated union 'Shape', with 'kind' property to discriminate the type of object.
+  type Shape = Circle | Square | Triangle;
 
   // TypeScript warns us with errors in calculateArea function
   const calculateArea = (shape: Shape) => {
-    // Error - Switch is not exhaustive. Cases not matched: "circle"
+    // Error - Switch is not exhaustive. Cases not matched: "triangle"
     switch (shape.kind) {
+      case 'circle':
+        return Math.PI * shape.radius ** 2;
       case 'square':
-        return shape.size * shape.size;
-      case 'rectangle':
-        return shape.width * shape.size; // Error - Property 'size' does not exist on type 'rectangle'
+        return shape.size * shape.width; // Error - Property 'width' does not exist on type 'square'
     }
   };
   ```
