--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -53,10 +53,10 @@ Style Guide assumes using, but is not limited to:
 
 ## TLDR
 
-- Strive for data immutability. [&#11107;](#data-immutability)
 - Embrace const assertions. [&#11107;](#const-assertion)
-- Avoid type assertions. [&#11107;](#type--non-nullability-assertions)
+- Strive for data immutability. [&#11107;](#data-immutability)
 - Embrace discriminated unions. [&#11107;](#discriminated-union)
+- Avoid type assertions. [&#11107;](#type--non-nullability-assertions)
 - Strive for functions to be pure, stateless and have single responsibility. [&#11107;](#functions)
 - Majority of function arguments should be required (use optional sparingly). [&#11107;](#required--optional-args)
 - Strong emphasis to keep naming conventions consistent and readable. [&#11107;](#naming-conventions)
@@ -64,11 +64,6 @@ Style Guide assumes using, but is not limited to:
 - Code is organized and grouped by feature. Collocate code as close as possible to where it's relevant. [&#11107;](#code-collocation)
 - UI components must only show derived state and send events, nothing more (no business logic). [&#11107;](#component-types)
 - Test business logic, not implementation details. [&#11107;](#what--how-to-test)
-
-## Data Immutability
-
-Majority of the data should be immutable (use `Readonly`, `ReadonlyArray`, always return new array, object etc). To keep cognitive load for future developers low, try to keep data objects small.  
-As an exception mutations should be used sparingly in cases where truly necessary: complex objects, performance reasoning etc.
 
 ## Types
 
@@ -113,6 +108,12 @@ employees.set('Gabriel', 32);
 type UserRole = 'admin' | 'guest';
 const [userRole, setUserRole] = useState<UserRole>('admin'); // Type 'UserRole'
 ```
+
+### Data Immutability
+
+Majority of the data should be immutable - use `Readonly`, `ReadonlyArray`, always return new array, object etc.  
+To keep cognitive load for future developers low, try to keep data objects small.  
+As an exception mutations should be used sparingly in cases where truly necessary: complex objects, performance reasoning etc.
 
 ### Return Types
 
