--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -250,7 +250,7 @@ If TypeScript error can't be mitigated, as last resort use `@ts-expect-error` to
 const newUser = createUser('Gabriel');
 
 // ✅ Use @ts-expect-error with description
-// @ts-expect-error: The library definition is wrong, createUser accepts string as an argument.
+// @ts-expect-error: The library type definition is wrong, createUser accepts string as an argument.
 const newUser = createUser('Gabriel');
 ```
 
