--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -765,7 +765,7 @@ import { baz } from './baz';
 
 ### Project Structure
 
-Example frontend monorepo project, where every application has following file/folder structure:
+Example frontend monorepo project, where every application has file/folder grouped by feature:
 
 ```shell
 apps/
