--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1114,7 +1114,7 @@ Automated test comes with benefits that helps us write better code and makes it 
 - As mentioned in [function conventions](#functions) try to keep them pure, and impure one small and focused.  
   It makes them easy to test, by passing args and observing return values, since we will **rarely need to mock dependencies**.
 - Strive to write tests in a way your app is used by a user, meaning test business logic.  
-  E.g. given some user input, they receive the expected output for a process.
+  E.g. For a specific user role or permission, given some input, we receive the expected output from the process.
 - Make tests as isolated as possible, where they don't depend on order of execution and should run independently with its own local storage, session storage, data, cookies etc.
   Test isolation improves reproducibility, makes debugging easier and prevents cascading test failures.
 - Tests should be resilient to changes.
