--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1132,7 +1132,7 @@ Automated test comes with benefits that helps us write better code and makes it 
 
   ```ts
   // ❌ Avoid
-  it('should render user list', () => {
+  it('should render the user list', () => {
     render(<UserList />);
     expect(screen.getByText('Users List')).toBeInTheDocument();
   });
