--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: TypeScript Style Guide
-description: TypeScript Style Guide provides a concise set of conventions and best practices used to create consistent, maintainable code.
+description: TypeScript Style Guide provides a concise set of conventions and best practices to create consistent, maintainable code.
 toc_min_heading_level: 2
 toc_max_heading_level: 2
 ---
@@ -13,7 +13,7 @@ import { UseDocumentTitle } from '@site/src/hooks';
 
 ## Introduction
 
-TypeScript Style Guide provides a concise set of conventions and best practices used to create consistent, maintainable code.
+TypeScript Style Guide provides a concise set of conventions and best practices to create consistent, maintainable code.
 
 ## Table of Contents
 
@@ -28,8 +28,8 @@ Still certain design and architectural decisions must be followed which are desc
 
 ### Why
 
-- As project grow in size and complexity, maintaining code quality and ensuring consistent practices becomes increasingly challenging.
-- Defining and following a standard way to write TypeScript applications brings consistent codebase and faster development cycles.
+- As project grow in size and complexity, maintaining code quality and ensuring consistent practices become increasingly challenging.
+- Defining and following a standard way to write TypeScript applications brings a consistent codebase and faster development cycles.
 - No need to discuss code styles in code reviews.
 - Saves team time and energy.
 
