--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -150,7 +150,7 @@ Consider benefits when explicitly typing the return value of a function:
 
 ### Discriminated union
 
-If there is only one TypeScript feature to choose, embrace discriminated unions.
+If there's only one TypeScript feature to choose from, embrace discriminated unions.
 
 Discriminated unions are a powerful concept to model complex data structures and improve type safety, leading to clearer and less error-prone code.  
 You may encounter discriminated unions under different names such as tagged unions or sum types in various programming languages as C, Haskell, Rust (in conjunction with pattern-matching).
