--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -512,7 +512,7 @@ type ColorValue = Color[ColorKey]; // Type "#B33930" | "#113A5C" | "#9C0E7D"
 
 ### Type Union & Boolean Flags
 
-Strive to use type union variable instead multiple boolean flag variables.
+Embrace type unions, especially when type union options are mutually exclusive, instead multiple boolean flag variables.
 
 Flags tend to compound over time and become hard to maintain, since they hide the actual app state.
 
