--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -37,7 +37,7 @@ Still certain design and architectural decisions must be followed which are desc
 
 As any code style guide is opinionated, this is no different as it tries to set conventions (sometimes arbitrary) that govern our code.
 
-You don't have to follow every convention exactly as it is written in guide, decide what works best for your product and team to stay consistent with your codebase.
+You don't have to follow every convention exactly as written in the guide, decide what works best for your product and team to stay consistent with your codebase.
 
 ### Requirements
 
