--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -144,7 +144,7 @@ You may encounter discriminated unions under different names such as tagged unio
 
 Discriminated unions advantages:
 
-- As mentioned in [Args as Discriminated Union](#args-as-discriminated-union), discriminated union eliminates optional args which decreases complexity on function API.
+- As mentioned in [Args as Discriminated Union](#args-as-discriminated-union), discriminated union eliminates optional object properties which decreases complexity on function API.
 - Exhaustiveness check - TypeScript can ensure that all possible variants of a type are implemented, eliminating the risk of undefined or unexpected behavior at runtime. ([eslint rule](https://typescript-eslint.io/rules/switch-exhaustiveness-check/))
 
   ```ts
